--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@craco/craco": "^6.2.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "firebase": "^9.0.1",
+    "axios": "^0.21.4",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
@@ -44,7 +45,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
