--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@craco/craco": "^6.2.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "sass": "^1.39.0",
     "twin.macro": "^2.7.0",
