--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitThis": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
